--- a/PS-0.ipynb
+++ b/PS-0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNN+uz6QIyHlN7OkWr6dhZ5",
+      "authorship_tag": "ABX9TyNNS9jYVSTKd38dPVmTA8Fg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# PS-0"
+      ],
+      "metadata": {
+        "id": "VMhBQxBiHvpo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "IMPORTING FILES"
       ],
       "metadata": {
@@ -42,6 +51,15 @@
       ],
       "metadata": {
         "id": "GD6CuId_C-dj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This dataset is about the 2015 population survey in mexico counties, California."
+      ],
+      "metadata": {
+        "id": "6X4H4IbHIEXl"
       }
     },
     {
